# icd2-osso-ic-dev

./: Makefile.am  configure.ac
debian/: changelog  control  copyright  icd2-osso-ic-dev.install  rules
include/: Makefile.am  osso-ic-dbus.h  osso-ic-gconf.h  osso-ic-ui-dbus.h  osso-ic.h
pkgconfig/: Makefile.am  osso-ic.pc.in
